hphp/hack/test/typecheck/new_inference/eager_solve/obj_get_widen.php.like_types.exp
File "obj_get_widen.php", line 21, characters 5-47:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
